2010-03-01  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* unix/tclUnixChan.c: [backported] Refrain from a possibly lengthy
	reverse-DNS lookup on 0.0.0.0 when calling [fconfigure -sockname]
	on an universally-bound (default) server socket.

2010-02-22  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclExecute.c:   Fix [Bug 2954959] expr abs(-0.0) is -0.0
	* tests/expr.test         Added some test cases, backported from 8.5

2010-02-11  Andreas Kupries  <andreask@activestate.com>

	* generic/tclCompile.c: [Bug 2949302]: Fixed leak of support
	structures for [info frame] which occured when bytecode
	compilation fails.

2010-02-01  Donal K. Fellows  <dkf@users.sf.net>

	* generic/regexec.c (ccondissect, crevdissect): [Bug 2942697]: Rework
	these functions so that certain pathological patterns are matched much
	more rapidly. Many thanks to Tom Lane for dianosing this issue and
	providing an initial patch.

2009-11-16  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tclEncoding.c: (Backport) Fix [Bug 2891556] and improve
	* tests/econding.test:   test to detect similar manifestations in the
				 future.
	
2009-11-12  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (CopyData): [Bug 2895565]. Dropped bogosity
	* tests/io.test: which used the number of _written_ bytes or
	character to update the counters for the read bytes/characters.
	New test io-53.11. This is a backward port from the 8.5 branch.

2009-11-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/fCmd.test:     Fixed a number of issues for Vista
	* tests/registry.test: and Win7 that are due to restricted
	* tests/tcltest.test:  permissions under UAC.
	* tests/winFCmd.test:

2009-11-10  Stuart Cassoff <stwo@users.sf.net>

	* win/README: [bug 2459744]: Removed outdated Msys + Mingw info.

2009-11-10  Andreas Kupries  <andreask@activestate.com>

	* generic/tclObj.c: Plug memory leak in TclContinuationsEnter().